--- a/index.html
+++ b/index.html
@@ -10,35 +10,41 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="nav navbar-default">
-      <div class="container-fluid">
+     <nav class="navbar navbar-default fixed-top" id="header-nav">
+        <div class="container-fluid">
           <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapse" data-toggle="collapse" aria-haspopup="true"
-               id="#Collapsablenavbar" aria-expanded="false">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-              </button>
-                <a href="index.html" class="navbar-brand">World Health <br>Organisation</a>
-            </div>
-        <div class="collapse navbar-collapse" aria-labelledby="Collapsablenavbar">
-             <ul class="nav navbar-nav">
-
-             </ul>
-  
-
-
-
+               <a href="index.html" class="navbar-brand"><h1>World Health Organization</h1></a>
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=#mycollapsenav
+                aria-haspopup="true" aria-expanded="false">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+          </div>
+        <div class="collapse navbar-collapse" id="mycollapsenav">
+               <ul class="nav navbar-nav text-center">
+                 <li class="active"><a href="index.html">Home</a></li>
+                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Information
+                   <span class="glyphicon glyphicon-menu-down"></span></a>
+                      <ul class="dropdown-menu w-100">
+                        <li><a href="#">Diseases</a></li>
+                        <li><a href="#">Facts</a></li>
+                        <li><a href="#">Statistics</a></li>
+                      </ul>
+                 </li>
+                  <li><a href="#">About Us</a></li>
+                </ul>
+              <ul class="nav navbar-nav navbar-right text-center">
+                  <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+                  <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Log In</a></li>
+              </ul>               
         </div>
-
-
-
-
-
-
-
-
-      </div>
-    </nav>
+        </div>
+     </nav>
+     <div class="container" id="main-content">
+       <div class="jumbotron">
+         <img src="download(1).jfif" alt="WHO logo"class="img-responsive visible-xs">
+       </div>
+     </div>
 </body>
 </html>
