--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="#">Statistics</a></li>
                       </ul>
                  </li>
-                  <li><a href="#">About Us</a></li>
+                  <li><a href="about/about.html">About Us</a></li>
                 </ul>
               <ul class="nav navbar-nav navbar-right text-center">
                   <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
